<resources>
    <string name="app_name">MoodCloud</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_setting">设置</string>
    <string name="startup_app_brief_introduction">心情云，你的心情分享装置！</string>
    <string name="startip_start">进入></string>
    <string name="main_chat">聊    天</string>
    <string name="main_mood">心    情</string>
    <string name="cancel">取    消</string>
    <string name="arrows"> ></string>
    <string name="my_center_mood">心情</string>
    <string name="my_center_diary">日记</string>
    <string name="my_center_friends">好友</string>
</resources>
